--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 numpy = "*"
 sklearn = "*"
 scipy = "*"
+sample = {editable = true, path = "."}
 
 [requires]
 python_version = "3.7"
