--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ numpy = "*"
 sklearn = "*"
 scipy = "*"
 homcv = {editable = true, git = "https://github.com/jmann277/homcv.git"}
+pandas = "*"
 
 [requires]
 python_version = "3.7"
